--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "midflow",
+  "name": "roslidoch",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -13,8 +13,6 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@clerk/backend": "^0.38.3",
-    "@clerk/clerk-expo": "^0.20.8",
     "@expo/vector-icons": "^14.0.0",
     "@freakycoder/react-native-bounceable": "^1.0.3",
     "@gorhom/bottom-sheet": "^4.6.1",
@@ -25,8 +23,6 @@
     "@shopify/flash-list": "1.6.3",
     "@tanstack/react-query": "^5.24.1",
     "@twotalltotems/react-native-otp-input": "1.3.5",
-    "convex": "^1.10.0",
-    "convex-helpers": "^0.1.24",
     "expo": "~50.0.8",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
@@ -45,11 +41,9 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-native": "0.73.4",
-    "react-native-calendars": "^1.1304.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "~1.8.0",
-    "react-native-gifted-chat": "^2.4.0",
     "react-native-maps": "1.10.0",
     "react-native-material-ripple": "^0.9.1",
     "react-native-picker-select": "^9.0.1",
@@ -61,7 +55,6 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
-    "svix": "^1.21.0",
     "zustand": "^4.5.1",
     "expo-image-picker": "~14.7.1"
   },
